ログインページのCSS実装

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="./image/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vite-project</title>
+    <!--パソコン以外でも正しい比率で表示されるようになる記述。将来の拡張性を考えて残すことにする-->
+    <title>未完星コレクション</title>
   </head>
   <body>
     <div id="root"></div>
